--- a/src/index.css
+++ b/src/index.css
@@ -35,10 +35,11 @@ body {
 }
 .headerMenuLogo {
 	cursor: pointer;
-	height: 200%;
+	height: 180%;
 }
 nav ul {
 	display: flex;
+	gap: 10px;
 }
 nav ul > li {
 	list-style: none;
@@ -95,13 +96,16 @@ nav ul > li > h3:not(.active):hover {
 	object-fit: cover;
 }
 .mainTitle {
-	margin: -300px 0px 100px 0px;
-	font-size: 48px;
+	margin: -200px 0px 70px 0px;
 }
 
-.mainTitle > h1,
-h3 {
+.mainTitle > h1 {
 	text-align: center;
+	font-size: 64px;
+}
+.mainTitle > h3 {
+	text-align: center;
+	font-size: 48px;
 }
 
 /*-------------------------------------*/
@@ -125,11 +129,12 @@ h3 {
 }
 .secondTitle > p,
 .experiencesTitle > p {
-	padding: 0px 20px 20px;
+	padding: 5px 20px 20px;
 	font-size: 32px;
 	text-align: center;
 	width: 100%;
 	margin: 0px auto;
+	line-height: 1.5;
 }
 .marginFifty {
 	margin-top: 50px;
@@ -140,9 +145,9 @@ h3 {
 .cardContainer {
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0px 50px 150px;
+	margin: 0px 30px 150px;
 	justify-content: space-evenly;
-	gap: 50px;
+	gap: 30px;
 	row-gap: 100px;
 }
 .card:hover {
@@ -182,7 +187,7 @@ h3 {
 }
 .cardText > p {
 	font-size: 18px;
-	padding-bottom: 10px;
+	padding: 10px 0px 5px;
 }
 .card:hover .cardText {
 	transform: translateY(20%);
@@ -210,19 +215,22 @@ h3 {
 	padding: 30px;
 	margin: auto;
 }
+.cardDescription > p {
+	margin-left: 40px;
+}
 .cardWeather {
 	/* display: flex; */
-	margin: 10px auto;
+	margin: 30px auto;
 	width: 34%;
 	min-width: 360px;
 	text-align: center;
-	padding: 10px;
 }
 .cardWeather > img {
-	border: solid 2px black;
+	border: solid 5px rgb(55, 211, 120);
+	padding: 10px;
 	border-radius: 15%;
-	width: 80%;
-	min-width: 350px;
+	width: 90%;
+	min-width: 340px;
 }
 
 /*-------------------------------------*/
@@ -289,19 +297,19 @@ h3 {
 .buttonSize {
 	width: 300px;
 	height: 100px;
-	border-radius: 45px;
+	border-radius: 10px 90px;
 }
 .btnSendSize {
 	width: 300px;
-	height: 50px !important;
-	border-radius: 45px;
-	font-size: 24px;
+	height: 60px !important;
+	font-size: 28px;
+	font-weight: 600;
 }
 .button > p {
 	padding: 6px;
 	display: flex;
 	justify-content: center;
-	font-weight: 500;
+	font-weight: 600;
 	font-size: 32px;
 }
 .button:hover {
@@ -328,7 +336,7 @@ h3 {
 	text-align: center;
 }
 .companyContainer {
-	width: 60%;
+	width: 62%;
 }
 .companyContainer > h2,
 .contactContainer > h2 {
@@ -342,9 +350,9 @@ h3 {
 	margin: auto;
 }
 .companyContainer > p {
-	font-size: 28px;
-	text-align: justify;
-	padding: 20px 10px 20px 40px;
+	font-size: 32px;
+	text-align: left;
+	padding: 20px 0px 20px 40px;
 	line-height: 2.5;
 	margin-top: 20px;
 }
@@ -360,7 +368,7 @@ h3 {
 .aboutUsTitle > h2 {
 	margin: 30px;
 	padding: 10px;
-	font-size: 28px;
+	font-size: 32px;
 }
 .aboutUsTitle > img {
 	width: 300px;
@@ -370,10 +378,11 @@ h3 {
 	padding: 10px;
 }
 .aboutUsTitle > p {
-	font-size: 28px;
+	font-size: 32px;
 	text-align: left;
 	padding: 20px 20px;
 	line-height: 2;
+	/* text-align: justify; */
 }
 
 /*----------------------contact---------------*/
@@ -381,44 +390,46 @@ h3 {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	gap: 20px;
-
+	/* gap: 10px; */
 	text-align: center;
+	/* border: solid 3px red; */
 }
 
 .contactContainer {
 	text-align: center;
 	font-size: 24px;
-	max-width: 60%;
-
+	max-width: 50%;
 	padding: 0px 20px;
 	width: 60%;
-	margin: 0px auto 50px;
+	margin: 0px 0px 50px;
+	/* border: solid 3px orange; */
 }
 
 .contactContainer > p {
 	line-height: 2;
-	padding: 20px;
-	font-size: 28px;
+	padding: 20px 10px;
+	font-size: 32px;
 }
 
 .contactInfo > h5 > a {
 	text-decoration: none;
 	color: #4a6660;
+	/* margin: 0px auto; */
 }
 .contactInfo {
 	background-color: #dbcc95;
-	min-width: 34%;
-	font-size: 28px;
+	min-width: 30%;
+	/* font-size: 28px; */
 	text-align: center;
-	margin: 0px auto;
+
+	/* border: solid 3px green; */
 }
 
 .contactInfo > h5 {
-	margin: 20px;
-	padding: 10px;
+	/* margin: 0px; */
+	padding: 15px;
 	font-size: 32px;
-	line-height: 2;
+	line-height: 2.5;
 }
 .contactForm {
 	display: flex;
@@ -452,6 +463,7 @@ h3 {
 	text-align: center;
 	height: 40px;
 	font-size: 26px;
+	color: rgb(90, 85, 85);
 }
 .contactTextArea {
 	border-radius: 20px;
@@ -459,6 +471,7 @@ h3 {
 	height: 100px;
 	width: 500px;
 	font-size: 26px;
+	color: rgb(90, 85, 85);
 }
 
 /*-------------------------------------*/
@@ -524,7 +537,7 @@ h3 {
 }
 /*------------responsive-------------------------*/
 
-@media screen and (max-width: 1300px) {
+/* @media screen and (max-width: 1300px) {
 	.hamburguerMenu {
 		display: flex;
 		cursor: pointer;
@@ -534,7 +547,7 @@ h3 {
 	nav ul {
 		display: none;
 		flex-direction: column;
-		/* width: 50%; */
+		 width: 50%;
 		background-color: #c3e2c2;
 		position: absolute;
 		right: 0px;
@@ -581,8 +594,8 @@ h3 {
 		width: 80%;
 		line-height: 1.5;
 	}
-}
-@media screen and (max-width: 863px) {
+}  */
+@media screen and (max-width: 1024px) {
 	.mainTitle {
 		margin: -320px 0px 70px 0px;
 	}
@@ -616,12 +629,11 @@ h3 {
 		line-height: 2;
 		margin: auto;
 	}
+	.mainImageTitle > video {
+		height: 100%;
+	}
 }
 @media screen and (max-width: 768px) {
-	.mainTitle {
-		font-size: 32px;
-		margin: -290px 0px 70px 0px;
-	}
 	.secondTitle {
 		margin: 20px auto 300px;
 	}
@@ -654,9 +666,14 @@ h3 {
 		line-height: 1.5;
 		margin-top: 10px;
 	}
+
+	.mainTitle {
+		font-size: 28px;
+		margin: -180px 0px 70px 0px;
+	}
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 640px) {
 	body {
 		margin: 0px 5%;
 		min-width: 320px;
@@ -674,12 +691,16 @@ h3 {
 		width: 250px;
 	}
 
-	/* nav ul {
-		display: none;
+	.mainTitle {
+		font-size: 20px;
+		margin: -140px 0px 70px 0px;
 	}
-	.hamburguerMenu {
-		display: flex;
-		cursor: pointer;
-	} */
+	.secondTitle > h2,
+	.experiencesTitle > h2 {
+		font-size: 32px;
+	}
+	.secondTitle > p,
+	.experiencesTitle > p {
+		font-size: 28px;
+	}
 }
-/*-------------------------------------*/
