--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,7 @@ nav ul > li > h3:not(.active):hover {
 .card {
 	border: solid 4px #c3e2c2;
 	border-radius: 15px;
-	background: url('../img/natureza_tour_adventure_jeep_800x533.png');
+	background: url('..//img/cardPhoto/marao.png');
 	width: 200px;
 	height: 300px;
 	/* margin: 0 10px; */
@@ -202,7 +202,7 @@ nav ul > li > h3:not(.active):hover {
 
 /*----------------------CardInfo---------------*/
 
-.CardCarroussel {
+.CardSlide {
 	width: 90%;
 	margin: -90px auto;
 }
